realizando cambios importantes